:memo: docs: align the agent guides with the new test tiers
Previously merged test-extension PR invalidated several claims: verify no
longer runs the integration tier (skipITs gates it), ignifyr-server's onFHIR
suites moved to io.ignifyr.integrationtest so mvn test is now Docker-free
reactor-wide, ignifyr-cli gained test sources for the edition-separation spec,
and testkit pins its suites. Point the root guide at test-flow/README.md rather
than duplicating it, and record that MappingJobLaunch.Batch now completes only
after post-batch archiving.